--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -68,6 +68,17 @@ body {
   grid-row-end: 3;
   background-color: #f6f6f6;
 }
+.footer {
+  grid-column-start: 2;
+  grid-column-end: -2;
+  grid-row-start: 5;
+  grid-row-end: 6;
+}
+.footer_description {
+  padding: 2rem 5rem;
+
+  background-color: #f6f6f6;
+}
 .area-textfield {
   grid-column-start: 4;
   grid-column-end: -4;
@@ -85,9 +96,43 @@ body {
   min-width: 35vw;
   max-height: 50vh;
 }
-
+.area-textfield__input-form {
+  display: flex;
+  flex-direction: column;
+}
+.area-textfield__buttons {
+  padding-top: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+}
 .App-link {
   color: #61dafb;
+}
+.links-section {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 6;
+  grid-row-end: 7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #5a9863;
+}
+.links-section_logos {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  padding-right: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 0.8rem;
+}
+.links-section_logos-facebook {
+  width: 1.8rem;
+  height: 1.8rem;
+}
+.links-section_logo {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 /*Typography*/
 .typography_header-page {
@@ -96,6 +141,11 @@ body {
 }
 .typography_description {
   color: #7c7777;
+  font-size: 1rem;
+}
+.typography_links-section {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   font-size: 1rem;
 }
 /*roboto style*/
@@ -178,7 +228,7 @@ body {
 }
 
 /* ___ */
-.header-1 {
+.header-1_1 {
   font-size: 3rem;
 
   color: black;
@@ -186,6 +236,10 @@ body {
   grid-row-end: 4;
   grid-column-start: 4;
   grid-column-end: -4;
+}
+.header-1_2 {
+  font-size: 3rem;
+  color: black;
 }
 
 @keyframes App-logo-spin {
