--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -111,18 +111,23 @@ body {
 .howToGetStarted_section {
   grid-row-start: 3;
   grid-row-end: 4;
-  grid-column-start: 4;
-  grid-column-end: -4;
+  grid-column-start: 2;
+  grid-column-end: -2;
 }
 .howToGetStarted_section-guide {
   display: grid;
-  grid-template-columns: 60vw 40vw;
+  grid-template-columns: 60% 40%;
 }
 .howToGetStarted_section-guide__stepByStep {
   display: grid;
-  grid-template-columns: min-content min-content;
+  grid-template-columns: min-content 1fr;
   grid-template-rows: min-content min-content min-content;
   row-gap: 1rem;
+  column-gap: 1rem;
+}
+.howToGetStarted_section__icons {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 .step {
   display: grid;
@@ -130,6 +135,12 @@ body {
   column-gap: 0.5rem;
   justify-items: center;
   align-items: center;
+}
+.step__desсription {
+  color: #5a5a5a;
+  font-size: 0.9rem;
+
+  text-align: left;
 }
 .links-section {
   grid-column-start: 1;
@@ -175,6 +186,9 @@ body {
   color: black;
   font-size: 0.8rem;
   font-weight: 600;
+
+  justify-self: center;
+  align-self: center;
 }
 /*roboto style*/
 .roboto-thin {
