Development MVP Phase 2+Design 2.3.24 - 1 - Trying to make an Proggress Bar while Loading

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -26,6 +26,9 @@ body {
   grid-column-start: 1;
   grid-column-end: -1;
 }
+.display-none {
+  display: none !important;
+}
 .App-header {
   /* background-color: #282c34; */
   background-color: white;
