--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -77,6 +77,36 @@ body {
   padding: 2rem 5rem;
 
   background-color: #f6f6f6;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(4, min-content);
+  column-gap: 3rem;
+}
+.footer_description-1 {
+  grid-column: 1/-1;
+  grid-row: 1/1;
+
+  padding-bottom: 2rem;
+}
+.footer_description-2 {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+.footer_description-3 {
+  grid-column: 3/5;
+  grid-row: 2/3;
+}
+.footer_description-4 {
+  grid-column: 2/4;
+  justify-self: center;
+}
+.footer_description-5 {
+  padding-top: 2rem;
+  grid-column: 1/-1;
+}
+.footer_description-4__list {
+  justify-self: center;
 }
 .area-textfield {
   grid-column-start: 4;
